@@ -258,10 +258,10 @@ ctx.symbol_info_filename = None
 #ctx.symbol_info_filename = 'symbol-info.txt'
 
 # cvs2svn uses "symbol strategy rules" to help decide how to handle
-# CVS symbols.  The rules in ctx.symbol_strategy_rules are applied in
-# order, and each rule is allowed to modify the symbol.  The result
-# (after each of the rules has been applied) is used for the
-# conversion.
+# CVS symbols.  The rules in a project's symbol_strategy_rules are
+# applied in order, and each rule is allowed to modify the symbol.
+# The result (after each of the rules has been applied) is used for
+# the conversion.
 #
 # 1. A CVS symbol might be used as a tag in one file and as a branch
 #    in another file.  cvs2svn has to decide whether to convert such a
@@ -281,27 +281,29 @@ ctx.symbol_info_filename = None
 # that has already been processed by an earlier rule, so in effect the
 # first matching rule is the one that is used.
 
+global_symbol_strategy_rules = []
+
 # To force all symbols matching a regular expression to be converted
 # as branches, add rules like the following:
-#ctx.symbol_strategy_rules.append(ForceBranchRegexpStrategyRule(r'branch.*'))
+#global_symbol_strategy_rules.append(ForceBranchRegexpStrategyRule(r'branch.*'))
 
 # To force all symbols matching a regular expression to be converted
 # as tags, add rules like the following:
-#ctx.symbol_strategy_rules.append(ForceTagRegexpStrategyRule(r'tag.*'))
+#global_symbol_strategy_rules.append(ForceTagRegexpStrategyRule(r'tag.*'))
 
 # To force all symbols matching a regular expression to be excluded
 # from the conversion, add rules like the following:
-#ctx.symbol_strategy_rules.append(ExcludeRegexpStrategyRule(r'unknown-.*'))
+#global_symbol_strategy_rules.append(ExcludeRegexpStrategyRule(r'unknown-.*'))
 
 # Usually you want this rule, to convert unambiguous symbols (symbols
 # that were only ever used as tags or only ever used as branches in
 # CVS) the same way they were used in CVS:
-ctx.symbol_strategy_rules.append(UnambiguousUsageRule())
+global_symbol_strategy_rules.append(UnambiguousUsageRule())
 
 # If there was ever a commit on a symbol, then it cannot be converted
 # as a tag.  Uncomment the following line to convert such symbols
 # automatically as branches:
-#ctx.symbol_strategy_rules.append(BranchIfCommitsRule())
+#global_symbol_strategy_rules.append(BranchIfCommitsRule())
 
 # Last in the list can be a catch-all rule that is used for symbols
 # that were not matched by any of the more specific rules above.
@@ -310,12 +312,12 @@ ctx.symbol_strategy_rules.append(UnambiguousUsageRule())
 # disambiguated above) is an error:
 
 # Convert all ambiguous symbols as branches:
-#ctx.symbol_strategy_rules.append(AllBranchRule())
+#global_symbol_strategy_rules.append(AllBranchRule())
 # Convert all ambiguous symbols as tags:
-#ctx.symbol_strategy_rules.append(AllTagRule())
+#global_symbol_strategy_rules.append(AllTagRule())
 # Convert ambiguous symbols based on whether they were used more
 # often as branches or as tags:
-#ctx.symbol_strategy_rules.append(HeuristicStrategyRule())
+#global_symbol_strategy_rules.append(HeuristicStrategyRule())
 
 # It is possible to specify manually exactly how symbols should be
 # converted and what line of development should be used as the
@@ -330,16 +332,16 @@ ctx.symbol_strategy_rules.append(UnambiguousUsageRule())
 # CollateSymbolsPass with --write-symbol-info option, copy the symbol
 # info and edit it to create a hints file, then re-start the
 # conversion at CollateSymbolsPass with this option enabled.
-#ctx.symbol_strategy_rules.append(SymbolHintsFileRule('symbol-hints.txt'))
+#global_symbol_strategy_rules.append(SymbolHintsFileRule('symbol-hints.txt'))
 
 # This rule sets the SVN path of each symbol to the default value for
 # the project containing it, if a path hasn't been set already.
-ctx.symbol_strategy_rules.append(DefaultBasePathRule())
+global_symbol_strategy_rules.append(DefaultBasePathRule())
 
 # The last rule is here to choose the preferred parent of branches and
 # tags, that is, the line of development from which the symbol
 # sprouts.
-ctx.symbol_strategy_rules.append(HeuristicPreferredParentRule())
+global_symbol_strategy_rules.append(HeuristicPreferredParentRule())
 
 # Specify a username to be used for commits generated by cvs2svn.  If
 # this options is set to None then no username will be used for such
@@ -480,6 +482,7 @@ ctx.retain_conflicting_attic_files = False
 #   regexp and its replacement to avoid backslash substitution within
 #   those strings.
 
+
 # Create the default project (using ctx.trunk, ctx.branches, and ctx.tags):
 run_options.add_project(
     Project(
@@ -492,6 +495,10 @@ run_options.add_project(
             #                      r'release-\1.\2'),
             #RegexpSymbolTransform(r'release-(\d+)_(\d+)_(\d+)',
             #                      r'release-\1.\2.\3'),
+            ],
+        symbol_strategy_rules=global_symbol_strategy_rules + [
+            # Additional, project-specific symbol strategy rules can
+            # be added here.
             ],
         )
     )
@@ -509,6 +516,10 @@ run_options.add_project(
 #            #                      r'release-\1.\2'),
 #            #RegexpSymbolTransform(r'release-(\d+)_(\d+)_(\d+)',
 #            #                      r'release-\1.\2.\3'),
+#            ],
+#        symbol_strategy_rules=global_symbol_strategy_rules + [
+#            # Additional, project-specific symbol strategy rules can
+#            # be added here.
 #            ],
 #        )
 #    )
