@@ -218,6 +218,9 @@ run_options.add_project(
         symbol_transforms=[
             #...whatever...
             ],
+        symbol_strategy_rules=[
+            #...whatever...
+            ],
         )
     )
 run_options.add_project(
@@ -227,6 +230,9 @@ run_options.add_project(
         'project_b/branches',
         'project_b/tags',
         symbol_transforms=[
+            #...whatever...
+            ],
+        symbol_strategy_rules=[
             #...whatever...
             ],
         )
@@ -254,6 +260,9 @@ run_options.add_project(
         'foo/branches',
         'foo/tags',
         symbol_transforms=[
+            #...whatever...
+            ],
+        symbol_strategy_rules=[
             #...whatever...
             ],
         )
